# AoC2025

./: .gitignore  CMakeLists.txt  README.md
exercise1/: CMakeLists.txt  main.cpp
exercise2/: CMakeLists.txt  main.cpp
exercise3/: CMakeLists.txt  main.cpp
exercise4/: CMakeLists.txt  main.cpp
helpers/: CMakeLists.txt  FileUtilities.cpp  FileUtilities.h  Log.cpp  Log.h  TestUtilities.h
